fixed height on mobile chat

--- a/src/components/Chats/ChatsDirectMobileSingle.scss
+++ b/src/components/Chats/ChatsDirectMobileSingle.scss
@@ -89,7 +89,7 @@
 }
 
 #ce-feed-container {
-	height: 100% !important;
+	height: 95% !important;
 }
 
 .button {
